@@ -16,15 +16,17 @@
 #include <libnr/nr-path.h>
 #include "forward.h"
 
-unsigned int sp_print_bind (SPPrintContext *ctx, NRMatrixF *transform, float opacity);
+unsigned int sp_print_bind (SPPrintContext *ctx, const NRMatrixF *transform, float opacity);
 unsigned int sp_print_release (SPPrintContext *ctx);
 
-unsigned int sp_print_fill (SPPrintContext *ctx, NRBPath *bpath, NRMatrixF *ctm, SPStyle *style,
-			    NRRectF *pbox, NRRectF *dbox, NRRectF *bbox);
-unsigned int sp_print_stroke (SPPrintContext *ctx, NRBPath *bpath, NRMatrixF *transform, SPStyle *style);
+unsigned int sp_print_fill (SPPrintContext *ctx, const NRBPath *bpath, const NRMatrixF *ctm, const SPStyle *style,
+			    const NRRectF *pbox, const NRRectF *dbox, const NRRectF *bbox);
+unsigned int sp_print_stroke (SPPrintContext *ctx, const NRBPath *bpath, const NRMatrixF *transform, const SPStyle *style,
+			      const NRRectF *pbox, const NRRectF *dbox, const NRRectF *bbox);
+
 unsigned int sp_print_image_R8G8B8A8_N (SPPrintContext *ctx,
 					unsigned char *px, unsigned int w, unsigned int h, unsigned int rs,
-					NRMatrixF *transform, SPStyle *style);
+					const NRMatrixF *transform, const SPStyle *style);
 
 
 /* UI */
