@@ -1,5 +1,9 @@
 2002-10-21  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/widgets/sp-toolbox.c: Removed whole gtk.h inclusion
+
+	* src/toolbox.c: Added missing headers
+
 	* src/print.c (sp_print_image_R8G8B8A8_N): Implement
 	(sp_print_preview): Remove root transform
 	(sp_print_fill): Do not apply ctm twice
